--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "~13.3.0",
     "angular-datatables": "^13.0.1",
     "bootstrap": "^5.1.3",
+    "datatables.net": "^1.11.5",
+    "datatables.net-bs5": "^1.12.0",
+    "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.10",
     "tslib": "^2.3.0",
@@ -29,7 +32,9 @@
     "@angular-devkit/build-angular": "~13.3.3",
     "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.9",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
