--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "angular-datatables": "^13.0.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.2",
     "datatables.net": "^1.11.5",
     "datatables.net-bs5": "^1.12.0",
     "jquery": "^3.6.0",
